# commence

./: .gitignore  .hlint.yaml  LICENSE  cabal.project  commence.cabal  default.nix
core/: .dir-locals.el  commence-core.cabal
core/src/Commence/: ACL.hs  Logging.hs  Multilogging.hs
core/src/Commence/JSON/: Pretty.hs
core/src/Commence/Runtime/: Errors.hs
core/src/Commence/Runtime/Errors/: Code.hs  Mode.hs
core/src/Commence/Server/: Auth.hs
core/src/Commence/Server/Components/: Navbar.hs  Shared.hs
core/src/Commence/Types/: Secret.hs  Wrapped.hs
core/src/WaiAppStatic/Storage/Filesystem/: Extended.hs
interactive-state/: .dir-locals.el  CHANGELOG.md  commence-interactive-state.cabal
interactive-state/src/Commence/InteractiveState/: Repl.hs
interactive-state/src/Commence/InteractiveState/Disp/: Helpers.hs
nix/: contents.nix  monad-log.nix  overlay.nix  overlays.nix  sources.json
prototype-hs-lib/: prototype-hs-lib.cabal
prototype-hs-lib/src/Commence/InteractiveState/: Class.hs
scripts/: ghci.conf  ghci.sh
src/Commence/: ACL.hs  Logging.hs  Multilogging.hs
src/Commence/ACL/: Types.hs
src/Commence/JSON/: Pretty.hs
src/Commence/Runtime/: Errors.hs  Storage.hs
src/Commence/Types/: NonEmptyText.hs  Secret.hs  Wrapped.hs
src/Commence/Util/: Module.hs
src/WaiAppStatic/Storage/Filesystem/: Extended.hs
start-servant-lib/: .dir-locals.el  CHANGELOG.md  start-servant-lib.cabal
start-servant-lib/src/Commence/: Logging.hs  Multilogging.hs
start-servant-lib/src/Commence/ACL/: Types.hs
start-servant-lib/src/Commence/Runtime/: Errors.hs  Storage.hs
start-servant-lib/src/Commence/Types/: NonEmptyText.hs  Secret.hs  Wrapped.hs
start-servant-lib/src/Commence/Util/: Module.hs
tests/Commence/: GHCi.hs
