cabal-version:      2.4
name:               commence
version:            0.1.1.0

common common-extensions
  default-language: Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TupleSections
    TypeApplications
    TypeSynonymInstances
    UndecidableInstances

-- Common language settings
common lang-settings
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wmissing-export-lists
    -fno-warn-missing-signatures
    -fno-warn-unused-do-bind

library

  import: common-extensions
        , lang-settings

  build-depends: base-noprelude >=4.7 && <5
               , protolude
               , lens
               -- Data
               , text
               , bytestring
               , http-api-data
               , aeson
               , vector
               -- HTML
               , blaze
               , blaze-html
               , blaze-markup
               -- HTTP
               , http-types
               , servant
               , servant-server
               , servant-auth-server

               -- Data.Map etc.
               , containers
               -- STM
               , stm
               , stm-containers
               -- Dependencies for logging.
               , pretty-simple
               , fast-logger
               , monad-log
               , optparse-applicative
               , exceptions
               -- Commence.Util.Module needs this.
               , template-haskell
               -- Dependencies for WaiAppStatic.Storage.Filesystem.Extended.
               , cryptonite
               , filepath
               , memory
               , unix-compat
               , wai
               , wai-app-static

  hs-source-dirs:   src

  exposed-modules: Commence.Types.NonEmptyText
                 , Commence.Types.Secret
                 , Commence.Types.Wrapped
                 -- Logging.
                 , Commence.Logging
                 , Commence.Multilogging
                 , Commence.Util.Module
                 , Commence.Runtime.Errors
                 , Commence.Runtime.Storage
                 , Commence.ACL
                 , Commence.ACL.Types
                 -- Web.
                 , Commence.Server.Auth
                 --  JSON helpers.
                 , Commence.JSON.Pretty
                 , WaiAppStatic.Storage.Filesystem.Extended
