cabal-version:      2.4
name:               commence-core
version:            0.1.0.0
extra-source-files: CHANGELOG.md

common common-extensions
  default-language: Haskell2010
  default-extensions:
    TupleSections 
    StrictData
    MultiParamTypeClasses
    DerivingStrategies
    DerivingVia
    DeriveGeneric
    RecordWildCards
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    UndecidableInstances
    LambdaCase
    TypeApplications
    ScopedTypeVariables
    GADTs

-- Common language settings
common lang-settings
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wmissing-export-lists
    -fno-warn-missing-signatures
    -fno-warn-unused-do-bind

library

  import: common-extensions
        , lang-settings 

  build-depends: base-noprelude >=4.7 && <5
               , protolude
               , lens
               -- Data 
               , text
               , bytestring
               , http-api-data
               , aeson
               -- HTML 
               , blaze
               , blaze-html 
               , blaze-markup
               -- HTTP
               , http-types 
               , servant 
               , servant-server 
               , servant-auth-server

               -- Data.Map etc.
               , containers
               -- STM
               , stm
               , stm-containers 
               -- Dependencies for logging.
               , pretty-simple
               , fast-logger
               , monad-log
               , optparse-applicative 
               , exceptions 
               -- Commence.Util.Module needs this. 
               , template-haskell 
              
  mixins: protolude (Protolude as Prelude) 

  hs-source-dirs:   src

  exposed-modules: Commence.Types.NonEmptyText
                 , Commence.Types.Secret 
                 , Commence.Types.Wrapped 
                 -- Logging.
                 , Commence.Logging 
                 , Commence.Multilogging 
                 , Commence.Util.Module 
                 , Commence.Runtime.Errors
                 , Commence.Runtime.Storage 
                 , Commence.ACL
                 , Commence.ACL.Types 
                 -- Web.
                 , Commence.Server.Auth 
