cabal-version:      2.4
name:               commence-interactive-state
version:            0.1.0.0

common common-extensions
  default-language: Haskell2010
  default-extensions:
    TupleSections 
    StrictData
    MultiParamTypeClasses
    DerivingStrategies
    DerivingVia
    DeriveGeneric
    RecordWildCards
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    UndecidableInstances
    LambdaCase
    TypeApplications
    ScopedTypeVariables
    GADTs
    OverloadedStrings 

-- Common language settings
common lang-settings
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wmissing-export-lists
    -fno-warn-missing-signatures
    -fno-warn-unused-do-bind

library 

    import: common-extensions
          , lang-settings 

    build-depends: base-noprelude >=4.7 && <5
                 , protolude
                 , data-default-class
                 , text
                 , pretty-simple
                 , commence-core
                 , haskeline 
     
    mixins: protolude (Protolude as Prelude) 

    hs-source-dirs:   src

    exposed-modules:
      Commence.InteractiveState.Repl
      Commence.InteractiveState.Class
      Commence.InteractiveState.Disp.Helpers
      
    