cabal-version:      2.4
name:               start-servant-lib
version:            0.1.0.0
extra-source-files: CHANGELOG.md

executable start-servant-lib
    main-is:          Main.hs

    build-depends: base-noprelude >=4.7 && <5
                 , protolude
                
    mixins: protolude (Protolude as Prelude) 

    hs-source-dirs:   app
    default-language: Haskell2010
