cabal-version:      2.4
name:               start-servant-lib
version:            0.1.0.0
extra-source-files: CHANGELOG.md

common common-extensions
  default-language: Haskell2010
  default-extensions:
    TupleSections 
    StrictData
    MultiParamTypeClasses
    DerivingStrategies
    DerivingVia
    DeriveGeneric
    RecordWildCards
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    UndecidableInstances
    LambdaCase
    TypeApplications
    ScopedTypeVariables
    NoImplicitPrelude
    GADTs

-- Common language settings
common lang-settings
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wmissing-export-lists
    -fno-warn-missing-signatures
    -fno-warn-unused-do-bind

library

  import: common-extensions
        , lang-settings 

  build-depends: base-noprelude >=4.7 && <5
               , protolude
               , lens
               , text
               , http-api-data
               , aeson
               , blaze
               , blaze-html 
              
  mixins: protolude (Protolude as Prelude) 

  hs-source-dirs:   src

  exposed-modules: Commence.Types.NonEmptyText
                 , Commence.Types.Secret 
